styles/registerLoginModal.module.css
.container {
  position: fixed !important;
  height: 100vh;
  width: 100vw;
  transition: all 0.2s;
  z-index: 1000;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 0;
  visibility: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
}
.body {
  background-color: #f2f4f5;
  top: 0%;
  transform: translateY(-100vw);
  height: 60rem;
  width: 50vw;
  transition: all 0.2s;
  font-size: 1.6rem;
}
.header {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  justify-items: center;
  text-transform: uppercase;
}
.header > * {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  margin: 0%;
  padding: 2rem;
  background-color: #ebebeb;
}
.opts {
  position: relative;
}
.opts > * {
  position: absolute;
  top: 2rem;
  width: 100%;
  height: 100%;
}
.active {
  background-color: rgba(1, 2, 78, 0.76);
  color: #f2f4f5;
  font-weight: 600;
}
.container__show.container {
  opacity: 1;
  visibility: visible;
}
.container__show .body {
  transform: translate(0vh);
}

.input {
  display: flex;
  flex-direction: column;
  margin-bottom: 1rem;
}

/* background-color: #f2f4f5;
border: 1px solid #ebebeb; */
.input input {
  border: none;
  border-bottom: 1px solid #707079;
  padding: 1rem 0 4px 0;
  transition: all 0.2s;
  background-color: transparent;
  position: relative;
  z-index: 10;
}
.agent .input {
  margin-bottom: 0%;
}
.input label {
  transform: translateY(2.5rem);
  transition: all 0.2s;
  width: fit-content;
  cursor: text;
  font-style: italic;
}

.focused label {
  transform: translateY(1rem);
  font-style: normal;
}
.focused input {
  border-bottom: 2px solid rgba(1, 2, 78, 0.76);
}
.error input {
  border-bottom: 2px solid red;
}
.error div {
  color: red;
  font-weight: 600;
}
.login,
.register,
.agent {
  padding: 2rem;
  transition: all 0.2s;
}
.login {
  transform: translateY(5rem);
  opacity: 0;
  visibility: hidden;
  transform: scale(0);
}
.register {
  transform: scale(0);
  opacity: 0;
  visibility: hidden;
}
.register_active.register {
  opacity: 1;
  visibility: visible;
  transform: scale(1);
}
.login_active.login {
  opacity: 1;
  visibility: visible;
  transform: scale(1) translateY(5rem);
}

.login_btn {
  padding: 4rem;
}

.register_btn,
.login_btn {
  display: flex;
  justify-content: center;
  transition: all 0.2s;
}
.agent .register_btn {
  margin-top: 2rem;
}
.register_btn button,
.login_btn button {
  width: 70%;
  height: 4rem;
  background-color: rgba(1, 2, 78, 0.76);
  color: #f2f4f5;
  border: none;
  cursor: pointer;
  text-transform: uppercase;
}

.register_btn button:disabled,
.login_btn button:disabled {
  background-color: rgba(1, 2, 78, 0.5);
  cursor: not-allowed;
}
.agnt_link {
  text-transform: uppercase;
  display: flex;
  justify-content: center;
  color: rgba(1, 2, 78, 0.76);
  text-decoration: underline;
  cursor: pointer;
  font-style: italic;
}
.agent {
  opacity: 0;
  visibility: hidden;
  transform: scale(0);
}

.agent_active.agent {
  opacity: 1;
  visibility: visible;
  transform: scale(1);
}
@media only screen and (max-width: 1000px) {
  .body {
    width: 70vw;
  }
}
@media only screen and (max-width: 600px) {
  .body {
    width: 90vw;
  }
}

